<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/linear_layout_padding">

    <!--<ImageView
        android:id="@+id/image_view"
        android:contentDescription="@string/img_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />-->

    <TextView
        android:id="@+id/section_textView"
        style="@style/text_views_listing"
        tools:text="@string/section"
        android:textColor="@color/colorSection"/>

    <TextView
        android:id="@+id/title_textView"
        style="@style/text_views_listing"
        tools:text="@string/title"
        android:textColor="@color/colorTitle"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/type_label_textView"
            style="@style/text_views_listing"
            android:text="@string/type_label"
            android:textColor="@color/colorType"
            android:paddingRight="5dp"/>

        <TextView
            android:id="@+id/type_textView"
            style="@style/text_views_listing"
            tools:text="@string/type"
            android:textStyle="normal"
            android:textColor="@color/colorType"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_label_textView"
            style="@style/text_views_listing"
            android:text="@string/date_label"
            android:textColor="@color/colorDate"
            android:paddingRight="5dp"/>

        <TextView
            android:id="@+id/date_textView"
            style="@style/text_views_listing"
            tools:text="@string/date"
            android:textStyle="normal"
            android:textColor="@color/colorDate"/>
    </LinearLayout>

</LinearLayout>